# VolumeKnob

./: .gitignore  CMakeLists.txt
firmware/: VolumeController.cpp  VolumeController.hpp  board.hpp  main.cpp
iziavr/: CMakeLists.txt
iziavr/include/izi/: bitmask.hpp  buffer.hpp  button.hpp  debug.hpp  delay.hpp  encoder.hpp  interrupt.hpp  limits.hpp  lock.hpp  math.hpp  mpl.hpp  port.hpp  preprocessor.hpp  type_traits.hpp  uart.hpp  vector.hpp
iziavr/include/izi/traits/: port.hpp  uart.hpp
iziavr/include/izi/utils/: bitmask.hpp  flags.hpp  math.hpp
iziavr/src/: iziavr.cpp  uart.cpp
iziavr/src/interrupt/: pcint.cpp  pcint0.cpp  pcint1.cpp  pcint2.cpp
src/: HidDevice.cpp  HidDevice.hpp  VolumeController.cpp  VolumeController.hpp  iziavr.h  main.cpp
usbdrv/: CMakeLists.txt  oddebug.c  osccal.c  osccal.h  usbconfig.h  usbdrv.c  usbdrv.h
usbdrv/include/vusb/: HidDevice.hpp  oddebug.h  usbconfig.h  usbconfig_attiny85.h
usbdrv/include/vusb/detail/: ConfigValidator.hpp  HidDeviceBase.hpp
usbdrv/src/: HidDevice.cpp  oddebug.c  osccal.c
